--- a/Cetris.html
+++ b/Cetris.html
@@ -48,8 +48,7 @@ src="file:///home/chronos/u-73c4f7d23dd65f4eca2c9660df2fd7571102eb57/MyFiles/Dow
  <form name="changeColor"> <input type="button"class="lightmode"
 name="colr" value=" Light Mode " onclick="document.bgColor='#FFFFFF'">
 <input type="button" name="colr" class='darkmode' value=" Dark Mode "
-onclick="document.bgColor='#333333'">  <input type="button"class="amongus"
-name="colr" value=" Among Us " onclick="document.bgColor='#000000'">
+onclick="document.bgColor='#333333'">
 <style>
 	.newboi {
 		background-color: #000000; /* black */
