--- a/Cetris.html
+++ b/Cetris.html
@@ -27,13 +27,7 @@
             margin:0 auto;
         }
     </style>
-
-	
-	<marquee><div class="tutorial"><h1>tutorial: rotate to rotate the piece,  move left to move the piece left, move right to move the piece right, and go down to move the piece down</h1> <a href="https://youtu.be/Qd9EfLiwqcw"><img
-src="file:///home/chronos/u-73c4f7d23dd65f4eca2c9660df2fd7571102eb57/MyFiles/Downloads/pet%20the%20crewmate.gif" height = '50' width = '50' ></a>
-	for theme song press play on the audio crontrols at the top left :J</div></marquee>
-		 <div class='title'>is this link my <a href="https://www.youtube.com/channel/UCxsUOgV_a4qrbqlW8Uk7s9Q">youtube channel </a> or is this a <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">RICKROLL</a></div><br>
-    <canvas id="tetris" width="200" height="400"></canvas>
+    <canvas id="tetris" width="200" height="400">if your reading this HTML5 is not supported )',:</canvas>
     <div class="scoreboi">
         Score : <div id="score">0</div>
     </div>
@@ -41,13 +35,6 @@ src="file:///home/chronos/u-73c4f7d23dd65f4eca2c9660df2fd7571102eb57/MyFiles/Dow
 		<p><button class="fullboi" onclick="goFullScreen();">Go Fullscreen</button></p></div></center>
     <script src="Cetrominoes.js"></script>
     <script src="Cetris.js"></script>
-	
-<div class='colorboi'>
- <form name = "changeColor" > <input type= "button" class="lightmode"
-name="colr" value=" Light Mode " onclick="document.bgColor='#FFFFFF'">
-<input type="button" name="colr" class='darkmode' value=" Dark Mode "
-onclick="document.bgColor='#333333'">  <!--<input type="button"class="amongus"
-name="colr" value=" Among Us " onclick="document.bgColor='#000000'">-->
 <script>function goFullScreen(){
     var canvas = document.getElementById("tetris");
     if(canvas.requestFullScreen)
@@ -70,157 +57,6 @@ name="colr" value=" Among Us " onclick="document.bgColor='#000000'">-->
   margin: 4px 2px;
   cursor: pointer;
 	}
-	.colorboi {
-		background-image: linear-gradient(to bottom right, gray, black); /* grey */
-  border: 8px;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-	}
-	.button1:hover {
-  background-color: #071a08;
-  color: white;
-		border-radius: 12px;
-}
-.red:hover {
-  background-color: #ff0303; /*red*/
-  color: white;
-}
-	.blue:hover {
-  background-color: #0022ff;/*blue*/
-  color: white;
-}
-.green:hover {
-  background-color: #0dff00;/*green*/
-  color: white;
-}
-	.lightmode:hover {
-		background-color: #363663;/*grey*/
-		color: white;
-	}
-	.darkmode:hover {
-		background-color: #363636;/*grey lmao*/
-		color: white;
-	}
-
-
-    .amongus:hover {
-	    background-color: #363636;/*grey incase you forgot*/
-	    color: white;
-	}
-/* Chrome, Safari */
-::-webkit-scrollbar {
-width: 15px;
-height: 15px;
-}
-::-webkit-scrollbar-track-piece  {
-background-color: #3baf09;
-}
-::-webkit-scrollbar-thumb:vertical {
-height: 30px;
-background-color: #ff458f;
-}
-	.fullboi:hover
-	{
-		background-color: #071a08;
-  color: white;
-		border-radius: 12px;
-	}
-	.scoreboi
-	{
-		background-color: #280e03;
-		color: white;
-		        border-radius: 12px
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
 	
 	
 	
